--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,5 +272,27 @@ body {
 
 
 @media screen and (max-width: 640px){
+  #logo{
+    width: 100%;
+    margin-left: 0;
+    margin-top: 0;
+    text-align: center;
+  }
+
+  nav{
+    width: 640px;
+    margin: 0;
+    text-align: center;
+  }
+
+  #main-container{
+    width: 600px;
+    margin-right: 1em;
+  }
   
-}
+  .work{
+    width: 500px;
+    margin-left: 1em;
+    margin-right: 0em;
+  }
+  }
