--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
-    color: #777777;
-    background: url("../images/white-waves.png");
+    color: #ffffff;
+    background-color: #060606;
   }
   
   * {
@@ -35,14 +35,14 @@ body {
   h3 {
     font-family: Georgia, Times, "Times New Roman", serif;
     font-weight: 700;
-    color: #4aaaa5;
+    color: #ffffff;
   }
   
   h1 {
     padding-bottom: 20px;
     font-size: 30px;
     line-height: 49px;
-    border-bottom: 3px solid #dddddd;
+    border-bottom: 3px solid #333333;
   }
   
   h2,
@@ -59,8 +59,8 @@ body {
     margin: 0 0 30px;
     overflow: auto;
     color: #ffffff;
-    background: #ffffff;
-    border-bottom: 2px solid #cccccc;
+    background: #060606;
+    border-bottom: 2px solid #333333;
   }
   
   #logo {
@@ -74,7 +74,7 @@ body {
     color: #ffffff;
     text-align: center;
     text-decoration: none;
-    background: #4aaaa5;
+    background: #060606;
   }
   
   nav {
@@ -87,9 +87,9 @@ body {
     padding-left: 15px;
     margin-left: 15px;
     line-height: 18px;
-    color: #999;
+    color: #333333;
     text-decoration: none;
-    border-left: 1px solid #efefef;
+    border-left: 1px solid #333333;
   }
   
   nav a:first-child {
@@ -105,8 +105,8 @@ body {
     color: #ffffff;
     color: #cccccc;
     text-align: center;
-    background: #666666;
-    border-top: 8px solid #4aaaa5;
+    background: #060606;
+    border-top: 8px solid #299fd6;
     height: 50px;
     /* position: fixed; */
   }
@@ -131,8 +131,8 @@ body {
     max-width: 960px;
     padding: 30px;
     margin: 0 0 40px;
-    background: #ffffff;
-    border: 1px solid #dddddd;
+    background: #299fd6;
+    border: 1px solid #333333;
   }
   
   /* portfolio page */
@@ -165,7 +165,7 @@ body {
     line-height: 30px;
     color: #ffffff;
     text-align: center;
-    background: #4aaaa5;
+    background: #e7dc2c;
     border-bottom: 0;
   }
   
@@ -213,7 +213,7 @@ body {
     font-size: 18px;
     color: #ffffff;
     cursor: pointer;
-    background: #4aaaa5;
+    background: #060606;
     border: 0 none;
   }
 
