--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
-    color: #ffffff;
+    color: #060606;
     background-color: #060606;
   }
   
@@ -35,7 +35,7 @@ body {
   h3 {
     font-family: Georgia, Times, "Times New Roman", serif;
     font-weight: 700;
-    color: #ffffff;
+    color: #060606;
   }
   
   h1 {
@@ -131,7 +131,8 @@ body {
     max-width: 960px;
     padding: 30px;
     margin: 0 0 40px;
-    background: #299fd6;
+    background-image: url("/assets/images/02.png");
+    object-fit: fill;
     border: 1px solid #333333;
   }
   
