--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ body {
     color: #cccccc;
     text-align: center;
     background: #060606;
-    border-top: 8px solid #299fd6;
+    border-top: 8px solid #56bed4;
     height: 50px;
     /* position: fixed; */
   }
@@ -176,46 +176,6 @@ body {
     height: auto;
     margin-top: 10px;
     margin-right: 25px;
-  }
-  
-  /* contact page */
-  
-  #contact-form ul {
-    margin-bottom: 20px;
-  }
-  
-  #contact-form li {
-    margin-bottom: 10px;
-  }
-  
-  label,
-  input[type=text],
-  input[type=email],
-  textarea {
-    display: block;
-    width: 100%;
-  }
-  
-  input[type=text],
-  input[type=email],
-  textarea {
-    height: 35px;
-    padding: 0 10px;
-    font-size: 14px;
-    border: 1px solid #dddddd;
-  }
-  
-  textarea {
-    height: 200px;
-  }
-  
-  input[type=submit] {
-    padding: 10px 30px;
-    font-size: 18px;
-    color: #ffffff;
-    cursor: pointer;
-    background: #060606;
-    border: 0 none;
   }
 
   /* media queries */
