--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,10 @@ body {
   p {
     margin-bottom: 20px;
   }
+
+  .about{
+    font-size: 1.25em;
+  }
   
   p:last-child {
     margin-bottom: 0;
@@ -95,10 +99,19 @@ body {
   nav a:first-child {
     border-left: 0 none;
   }
+
+  .parallax { 
+    background-image: url("/assets/images/02.png");
+    height: 100%; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   
   /* footer */
   
-  footer {
+  .footer {
     padding: 30px 0;
     clear: both;
     font-size: 12px;
@@ -107,8 +120,8 @@ body {
     text-align: center;
     background: #060606;
     border-top: 8px solid #56bed4;
+    margin-bottom: 0;
     height: 50px;
-    /* position: fixed; */
   }
   
   h3, h2 {
@@ -131,9 +144,9 @@ body {
     max-width: 960px;
     padding: 30px;
     margin: 0 0 40px;
-    background-image: url("/assets/images/02.png");
-    object-fit: fill;
-    border: 1px solid #333333;
+    /* background-image: url("/assets/images/02.png"); */
+    /* object-fit: fill; */
+    border: 10px solid #333333;
   }
   
   /* portfolio page */
