--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 34px;
     color: #060606;
     background-color: #060606;
@@ -101,7 +101,7 @@ body {
   }
 
   .parallax { 
-    background-image: url("/assets/images/02.png");
+    background-image: url("/assets/images/background_blue.jpg");
     height: 100%; 
     background-attachment: fixed;
     background-position: center;
@@ -148,12 +148,9 @@ body {
     background: rgba(0, 100, 100, 0.8); */
     border: 10px solid #333333;
   }
-  
-  /* portfolio page */
-  
+
   .work {
     position: relative;
-    float: left;
     width: 274px;
     margin: 20px 0 25px;
     overflow: auto;
