--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ body {
     padding-left: 15px;
     margin-left: 15px;
     line-height: 18px;
-    color: #333333;
+    color: #ffffff;
     text-decoration: none;
     border-left: 1px solid #333333;
   }
